# cadence

./: .env.example  .gitignore  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/api/: .dockerignore  Dockerfile  drizzle.config.ts  package.json
apps/api/drizzle/migrations/: 0000_certain_shadowcat.sql
apps/api/src/: app.ts  server.ts
apps/api/src/lib/: audit.ts  config.ts  dispatcher.ts  errors.ts  utils.ts
apps/intelligence/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/intelligence/app/: infrastructure.py  main.py
apps/intelligence/app/api/: deps.py
apps/intelligence/app/api/routes/: health.py  replay.py  scoring.py
apps/intelligence/app/core/: baseline_computer.py  confidence_scorer.py  divergence.py  drift_scorer.py  feature_extractor.py  normalizer.py  summary_generator.py
apps/intelligence/app/db/: client.py  queries.py
apps/intelligence/app/schemas/: __init__.py  events.py  features.py  scoring.py
apps/intelligence/app/workers/: stream_worker.py
apps/intelligence/scripts/: docker-entrypoint.sh
apps/intelligence/tests/: conftest.py  test_baseline_computer.py  test_confidence_scorer.py  test_contract_parity.py  test_defensive_fallbacks.py  test_divergence.py  test_drift_scorer.py  test_feature_extractor.py  test_full_pipeline.py  test_hand_computed_drift.py  test_hypothesis_properties.py  test_normalizer.py  test_normalizer_parity.py  test_summary_generator.py
apps/web/: package.json  pnpm-lock.yaml
infra/scripts/: setup-hypertables.sql  setup-timescaledb.sql
(+32 files in other folders)
